added readme file

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <p class="lead description">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container time-block">
+    <div class="container">
 
       <!-- Timeblocks go here -->
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">9AM</span>
+            <span class="border-0 input-group-text">9AM</span>
             </div>
             <textarea class="form-control" id="9"></textarea>
             <button class= "saveBtn" type="button" id="button-addon2"><i class="fa fa-save"></i></button>
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">10AM</span>
+            <span class="border-0 input-group-text">10AM</span>
             </div>
             <textarea class="form-control" id="10"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">11AM</span>
+            <span class="border-0 input-group-text">11AM</span>
             </div>
             <textarea class="form-control" id="11"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">12PM</span>
+            <span class="border-0 input-group-text">12PM</span>
             </div>
             <textarea class="form-control" id="12"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">1PM</span>
+            <span class="border-0 input-group-text">1PM</span>
             </div>
             <textarea class="form-control" id="13"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">2PM</span>
+            <span class="border-0 input-group-text">2PM</span>
             </div>
             <textarea class="form-control" id="14"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -96,7 +96,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">3PM</span>
+            <span class="border-0 input-group-text">3PM</span>
             </div>
             <textarea class="form-control" id="15"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -107,7 +107,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">4PM</span>
+            <span class="border-0 input-group-text">4PM</span>
             </div>
             <textarea class="form-control" id="16"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
@@ -118,7 +118,7 @@
       <div class="row">
         <div class="input-group">
           <div class="input-group-prepend hour">
-            <span class="input-group-text">5PM</span>
+            <span class="border-0 input-group-text">5PM</span>
             </div>
             <textarea class="form-control" id="17"></textarea>
             <button class="saveBtn"><i class="fa fa-save"></i></button>
