--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p class="lead description">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container min-vh-100">
 
       <!-- Timeblocks go here -->
       <div class="row">
@@ -36,7 +36,7 @@
             <span class="border-0 input-group-text">9AM</span>
             </div>
             <textarea class="form-control" id="9"></textarea>
-            <button class= "saveBtn" type="button" id="button-addon2"><i class="fa fa-save"></i></button>
+            <button class= "saveBtn" type="button"><i class="fa fa-save"></i></button>
         </div>
       </div>
 
